sponsor style update

--- a/src/App.css
+++ b/src/App.css
@@ -176,10 +176,10 @@
 }
 
 /* Add these styles to your existing App.css */
-* {
+/* * {
   cursor: none !important;
 }
 
 a, button, input, select, textarea {
   cursor: none !important;
-}
+} */
