--- a/src/Components/css/tracks.css
+++ b/src/Components/css/tracks.css
@@ -1,86 +1,10 @@
-.tracks-container {
-  color: white;
-  width: 100%;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
 
-.tracks {
-  width: 100%;
-  padding-top: 4rem;
-}
-
-.tracks-header {
-  width: 100%;
-  padding-top: 4rem;
-}
-
-.tracks-title {
-  font-size: 1.875rem; /* Equivalent to text-3xl */
-  padding: 2.5rem 0;
-  text-align: center;
-}
-
-.tracks-grid {
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 2rem;
-  margin-top: 2rem;
-  padding: 1rem;
-}
-
-/* Tablet View (2 per row) */
-@media (min-width: 768px) {
-  .tracks-grid {
-    grid-template-columns: repeat(2, 1fr);
+@keyframes drop {
+  0% {
+      top: -50%;
   }
-}
 
-/* PC View (2x2 Layout) */
-@media (min-width: 1024px) {
-  .tracks-grid {
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+  100% {
+      top: 110%
   }
-}
-
-.track-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 1.5rem;
-  border-radius: 0.75rem;
-  text-align: center;
-  box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.2);
-  transition: transform 0.3s ease-in-out;
-}
-
-.track-card:hover {
-  transform: translateY(-5px);
-}
-
-/* Smash-Themed Background Colors */
-.track-bg-1 {
-  background: linear-gradient(135deg, #ff7eb3, #ff758c);
-}
-
-.track-bg-2 {
-  background: linear-gradient(135deg, #5c67f2, #3b82f6);
-}
-
-.track-bg-3 {
-  background: linear-gradient(135deg, #ffb347, #ffcc33);
-}
-
-.track-bg-4 {
-  background: linear-gradient(135deg, #42e695, #3bb78f);
-}
-
-.track-name {
-  color: #fff;
-  font-size: 1.25rem;
-  margin-top: 1rem;
-  font-weight: bold;
 }
