--- a/src/Components/css/contact.css
+++ b/src/Components/css/contact.css
@@ -48,7 +48,7 @@
 .contact-item i {
   margin-right: 1rem;
   font-size: 1.5rem;
-  color: #00a69e;
+  color: #2ecc71;
 }
 
 .contact-link {
@@ -58,7 +58,7 @@
 }
 
 .contact-link:hover {
-  color: #00a69e;
+  color: #2ecc71;
 }
 
 .social-links {
