--- a/src/Components/css/contact.css
+++ b/src/Components/css/contact.css
@@ -13,7 +13,7 @@
   width: 100%; /* Responsive width */
   max-width: 480px; /* Prevents it from being too wide */
   height : 480px;
-  border: 3px solid #2ecc71; /* Green border */
+  border: 3px solid #09d55e; /* Green border */
   padding: 2rem; /* Reduced padding for better spacing */
   border-radius: 1rem;
   box-shadow: 0 10px 25px rgba(46, 204, 113, 0.3), 
@@ -62,7 +62,7 @@
 }
 
 .contact-link:hover {
-  color: #2ecc71;
+  color: #0ccb5b;
 }
 
 /* Social Media Links */
@@ -88,30 +88,61 @@
 
 /* Instagram - Gradient color */
 .social-link:nth-child(1) {
-  background: linear-gradient(45deg, #405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d);
+  background: transparent;
   color: white;
-  border-color: #c13584;
+  border-color: #1bc707;
+}
+.social-link:nth-child(1):hover {
+  /* Gradient background for Instagram */
+  background: linear-gradient(45deg, #feda75, #fa7e1e, #d62976, #962fbf, #4f5bd5);
+  color: white;
+  border-color: #21c60f;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+  filter: brightness(1.2);
 }
 
 /* LinkedIn - Solid blue */
 .social-link:nth-child(2) {
-  background: #0077B5;
+  background: transparent;
   color: white;
-  border-color: #0077B5;
+  border-color: #1bc707;
+}
+.social-link:nth-child(2):hover {
+  /* Gradient background for LinkedIn */
+  background: linear-gradient(45deg, #0077B5, #004182);
+  color: white;
+  border-color: #21c60f;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+  filter: brightness(1.2);
 }
 
 /* Discord - Blurple */
 .social-link:nth-child(3) {
-  background: #5865F2;
+  background: transparent;
   color: white;
-  border-color: #5865F2;
+  border-color:#1bc707;
+}
+.social-link:nth-child(3):hover {
+  /* Gradient background for LinkedIn */
+  background: linear-gradient(45deg, #5865F2, #404EED);
+  color: white;
+  border-color: #21c60f;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+  filter: brightness(1.2);
 }
 
 /* Telegram - Blue */
 .social-link:nth-child(4) {
-  background: #229ED9;
+  background:transparent;
   color: white;
-  border-color: #229ED9;
+  border-color:#1bc707;
+}
+.social-link:nth-child(4):hover {
+background: linear-gradient(45deg, #0088cc, #229ED9);
+  color: white;
+  border-color: #21c60f;
+  box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
+  filter: brightness(1.2);
 }
 
 .social-link:hover {
