--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   align-items: center;
   text-align: center;
   margin-top: 100px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .timeline h6 {
@@ -12,7 +12,7 @@
   font-size: 1.2rem;
   text-align: left;
   margin-top: 15px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .glimpse h1 {
@@ -21,7 +21,7 @@
   align-items: center;
   text-align: center;
   margin-top: 100px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .mentors h1 {
@@ -29,7 +29,7 @@
   font-size: 2.5rem;
   text-align: center;
   margin-top: 150px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .judges h1 {
@@ -37,7 +37,7 @@
   color: #e91e63;
   font-size: 2.5rem;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .GrandJury h1 {
@@ -45,7 +45,7 @@
   color: #ffeb3b;
   font-size: 2.5rem;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .individual h1 {
@@ -53,7 +53,7 @@
   color: #f0f0f0;
   font-size: 2.5rem;
   text-align: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
 }
 
 .map {
@@ -70,7 +70,7 @@
   font-size: 2.5rem;
   text-align: center;
   justify-content: center;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Architype Van';
   margin-bottom: 2rem;
 }
 
@@ -93,7 +93,7 @@
 }
 
 .answer {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: 'Architype Van';
   font-weight: 500;
 }
 
