updated mobile ui

--- a/src/Components/css/contact.css
+++ b/src/Components/css/contact.css
@@ -4,6 +4,7 @@
   width: 100%; /* Responsive width */
   max-width: 480px; /* Prevents it from being too wide */
   height : 480px;
+  margin-left: auto;
   border: 3px solid #09d55e; /* Green border */
   padding: 2rem; /* Reduced padding for better spacing */
   border-radius: 1rem;
