--- a/src/Components/css/landing.css
+++ b/src/Components/css/landing.css
@@ -437,6 +437,15 @@
 
 /* Responsive Design */
 @media (max-width: 1024px) {
+  #landing-main {
+    position: relative;
+    min-height: 100vh;
+    width: 100%;
+    display: flex;
+    overflow: hidden;
+    background:transparent;
+    padding: 2rem 0;
+  }
   .lcontent {
     width: 90%;
     background: transparent;
@@ -510,6 +519,10 @@
 }
 
 @media (max-width: 480px) {
+  #landing-main {
+   background: transparent;
+    padding: 1rem 0;
+  }
   .lcontent {
     background: transparent;
     width: 95%;
