--- a/src/App.css
+++ b/src/App.css
@@ -116,7 +116,7 @@
   background: transparent;
   position: relative;
   z-index: 1;
-  gap: 2rem;
+  gap: 10rem;
   width: 100%;
 }
 
@@ -158,6 +158,7 @@
 
 .conta > div {
   position: relative;
+  z-index: 2;
   background: transparent;
 }
 
