updating css of track.js and things

--- a/src/Components/css/sponsors.css
+++ b/src/Components/css/sponsors.css
@@ -19,7 +19,7 @@
 /* Main Wrapper */
 .sponsors-wrapper {
   width: 90%;
-  max-width: 500px;
+  max-width: 600px;
   background: linear-gradient(to bottom, #000000,rgba(8, 218, 34, 0.3));
   padding: 10px;
   border-radius: 20px;
@@ -141,6 +141,23 @@
     .sponsors .container {
       margin: 0px;
       justify-content: center;
+      display: flex;
+      object-fit: cover;
+    }
+    .sponsors-wrapper {
+      
+      width: 90%;
+      max-width: 100%px;
+      background: linear-gradient(to bottom, #000000,rgba(8, 218, 34, 0.3));
+      padding: 5px;
+      border-radius: 20px;
+      border: 1px solid rgb(0, 190, 102);
+      box-shadow: 0px 4px 10px rgba(69, 158, 44, 0.3);
+      text-align: center;
+    }
+    .sponsors-title {
+      font-size: 1.5rem;
+      margin-bottom: 10px;
     }
     .sponsors img{
       width: 340px;
