--- a/src/Components/css/photos.css
+++ b/src/Components/css/photos.css
@@ -68,7 +68,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
-  max-width: 800px;
+  max-width: 100%;
   width: 100%;
 }
 
