added the padding in faq and changed the font style in photo.css

--- a/src/Components/css/faqs.css
+++ b/src/Components/css/faqs.css
@@ -9,6 +9,7 @@
   max-width: 800px;
   margin: 0 auto;
   text-align: center;
+   padding: 1rem; /*added a bit of padding bro */
 }
 
 .faqs-content h2 {
@@ -33,7 +34,7 @@
 }
 
 .faq-question {
-  padding: 1.5rem;
+  padding: 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -88,6 +89,7 @@
 @media (max-width: 480px) {
   .faqs-content h2 {
     font-size: 1.8rem;
+    padding:2rem;
   }
 
   .faq-question {
