--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   align-items: center;
   text-align: center;
   margin-top: 100px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'OmegaFlight';
 }
 
 .mentors h1 {
@@ -174,6 +174,13 @@
   .contact-map-container .map {
     padding: 1rem;
   }
+}
+
+@media (max-width:480px) {
+  .glimpse h1{
+    margin-top: 1rem;
+  }
+  
 }
 
 /* Add these styles to your existing App.css */
