changes made in mobile view of faqs and resolved the font family and space issues in previos winners section

--- a/src/Components/css/photos.css
+++ b/src/Components/css/photos.css
@@ -5,9 +5,12 @@
   align-content: center;
   align-items: center;
   padding: 0px;
-  gap: 70px;
-  width: 100vw;
+  gap: 24px;
+  width: 100%;
+  max-width: 2000px; 
+  margin: 0 auto;
 }
+
 
 .hod-container {
   display: flex;
