--- a/src/Components/css/faqs.css
+++ b/src/Components/css/faqs.css
@@ -89,14 +89,14 @@
   font-size: 1rem;
   font-weight: 600;
   color: white;
-  background: var(--primary-color);
+  background: green;
   border: none;
   border-radius: 0.5rem;
   cursor: pointer;
   transition: all 0.3s ease;
 }
 
-.more-btn,.less-btn:hover {
+.more-btn:hover,.less-btn:hover {
   background: var(--accent-color);
 }
 
