--- a/src/Components/css/photos.css
+++ b/src/Components/css/photos.css
@@ -128,6 +128,7 @@
   margin-bottom: 1rem;
   width: 100%;
   font-family: 'OmegaFlight';
+  margin-top: 3rem;
 
 }
 
@@ -284,5 +285,15 @@
   
   .section-title {
     font-size: 1.5rem;
+  }
+}
+@media (max-width: 768px) {
+  .hod-container{
+    gap: 5rem;
+  }
+}
+@media (min-width: 768px) and (max-width:900px){
+  .hod-container{
+    gap: 5rem;
   }
 }
