--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
 }
 
 .glimpse h1 {
-  color: #f0f0f0;
+  color: #10e110;
   font-size: 2.5rem;
   align-items: center;
   text-align: center;
   margin-top: 100px;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .mentors h1 {
